--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         }
 
         .logo {
-            width: 50px;
+            width: 60px; /* Aumentado de 50px a 60px */
             height: auto;
             margin-right: 20px;
         }
@@ -100,6 +100,7 @@
             background-color: white;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             z-index: 1;
+            width: 200px; /* Aumentado el ancho del menú desplegable */
         }
 
         .submenu a {
@@ -173,7 +174,7 @@
             }
 
             .logo {
-                width: 40px;
+                width: 50px; /* Ajustado para pantallas pequeñas */
             }
 
             .image-container img {
