--- a/melancolico.html
+++ b/melancolico.html
@@ -12,6 +12,7 @@
             font-family: Arial, sans-serif;
             text-align: center;
         }
+
         button {
             font-size: 20px;
             padding: 10px 20px;
@@ -24,15 +25,18 @@
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
             transition: transform 0.3s ease, background-color 0.3s ease;
         }
+
         button:hover {
             transform: scale(1.05); /* Efecto de hover */
         }
+
         .image-container {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
             gap: 10px; /* Espacio entre las imágenes */
             padding: 20px;
         }
+
         .image-container img {
             width: 100%;
             height: 200px; /* Ajusta la altura de las imágenes */
@@ -42,9 +46,11 @@
             transition: transform 0.3s;
             cursor: pointer;
         }
+
         .image-container img:hover {
             transform: scale(1.05);
         }
+
         .text-preview {
             max-width: 600px;
             margin: 20px auto;
@@ -56,6 +62,7 @@
             height: 150px; /* Altura fija para la ventana de texto */
             color: #e0e0e0; /* Color de texto más claro */
         }
+
         #fullScreenContainer {
             position: fixed;
             top: 0;
@@ -69,17 +76,58 @@
             z-index: 9999; /* Asegúrate de que esté por encima de otros elementos */
             backdrop-filter: blur(10px); /* Desenfoque de fondo */
         }
+
         #fullScreenImg {
             max-width: 80%; /* Limita el ancho máximo de la imagen */
             max-height: 80%; /* Limita la altura máxima de la imagen */
             border-radius: 10px;
         }
+
         #description {
             margin-left: 20px; /* Espacio entre la imagen y la descripción */
             color: white; /* Color del texto de la descripción */
             max-width: 300px; /* Limita el ancho de la descripción */
             font-size: 18px; /* Tamaño del texto de la descripción */
             text-align: left; /* Alineación del texto */
+        }
+
+        /* Media queries para móviles */
+        @media (max-width: 768px) {
+            button {
+                font-size: 18px; /* Tamaño de fuente más pequeño en móviles */
+                padding: 10px; /* Menos padding */
+            }
+
+            .image-container {
+                padding: 10px; /* Menos padding */
+            }
+
+            .image-container img {
+                height: 150px; /* Ajusta la altura de las imágenes en móviles */
+            }
+
+            .text-preview {
+                height: auto; /* Altura automática para la ventana de texto */
+            }
+
+            #description {
+                font-size: 16px; /* Tamaño de fuente más pequeño para descripción */
+            }
+        }
+
+        @media (max-width: 480px) {
+            button {
+                font-size: 16px; /* Tamaño de fuente más pequeño en pantallas más pequeñas */
+                padding: 8px; /* Ajustar padding en pantallas pequeñas */
+            }
+
+            .image-container img {
+                height: 120px; /* Ajusta la altura de las imágenes en pantallas pequeñas */
+            }
+
+            #description {
+                max-width: 80%; /* Limitar el ancho en pantallas pequeñas */
+            }
         }
     </style>
 </head>
