--- a/iniciar.html
+++ b/iniciar.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -71,6 +71,9 @@
         <h1>Iniciar Sesión</h1>
         <input type="text" id="username" placeholder="Nombre de usuario" required>
         <input type="password" id="password" placeholder="Contraseña" required>
+        
+        <!-- Indicación para subir fotos -->
+        <h2>Introduzca hasta 5 fotos para ver a continuación:</h2>
         
         <!-- Subida de hasta 5 fotos -->
         <input type="file" id="photo1" accept="image/*">
